tests/examples/bad/wrong_copyright_in_filedockblock.php
<?php
/**
 *
 * @file
 * @version 1.0
 * @copyright Teleste GmbH
 * @author Daniel Haas <daniel.haas@cn-consult.eu>
 */
 